refactor(auction): remove obsolete CancelBid logic
